--- a/qa_overflow_frontend/package.json
+++ b/qa_overflow_frontend/package.json
@@ -17,6 +17,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
