--- a/qa_overflow_frontend/package.json
+++ b/qa_overflow_frontend/package.json
@@ -12,12 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "fontawesome": "^5.6.3",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
+    "slate-react": "^0.102.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
